exo4-show request headers content

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>ShowIPAddressServlet</servlet-name>
         <servlet-class>fr.m2i.javawebapp.ShowIPAddressServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ShowRequestHeaders</servlet-name>
+        <servlet-class>fr.m2i.javawebapp.ShowRequestHeaders</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>FirstServlet</servlet-name>
         <url-pattern>/FirstServlet</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>ShowIPAddressServlet</servlet-name>
         <url-pattern>/ShowIPAddressServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ShowRequestHeaders</servlet-name>
+        <url-pattern>/ShowRequestHeaders</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
