--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,14 @@
         <servlet-name>ShowRequestHeaders</servlet-name>
         <servlet-class>fr.m2i.javawebapp.ShowRequestHeaders</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EvenNumbers</servlet-name>
+        <servlet-class>fr.m2i.javawebapp.EvenNumbers</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CountWordsServlet</servlet-name>
+        <servlet-class>fr.m2i.javawebapp.CountWordsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>FirstServlet</servlet-name>
         <url-pattern>/FirstServlet</url-pattern>
@@ -31,6 +39,14 @@
     <servlet-mapping>
         <servlet-name>ShowRequestHeaders</servlet-name>
         <url-pattern>/ShowRequestHeaders</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EvenNumbers</servlet-name>
+        <url-pattern>/EvenNumbers</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CountWordsServlet</servlet-name>
+        <url-pattern>/CountWordsServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
