formulaire Tp distributeur

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,14 @@
         <servlet-name>PrimeNumberListServlet</servlet-name>
         <servlet-class>fr.m2i.javawebapp.PrimeNumberListServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CreditDistributeur</servlet-name>
+        <servlet-class>fr.m2i.javawebapp.CreditDistributeur</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DistributeurServlet</servlet-name>
+        <servlet-class>fr.m2i.javawebapp.DistributeurServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>FirstServlet</servlet-name>
         <url-pattern>/FirstServlet</url-pattern>
@@ -71,6 +79,14 @@
     <servlet-mapping>
         <servlet-name>PrimeNumberListServlet</servlet-name>
         <url-pattern>/PrimeNumberListServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreditDistributeur</servlet-name>
+        <url-pattern>/CreditDistributeur</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DistributeurServlet</servlet-name>
+        <url-pattern>/DistributeurServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
